--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -7,6 +7,12 @@
 }
 
 html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+html,
 body,
 div,
 span,
@@ -142,6 +148,12 @@ svg {
   width: 100%;
   margin: 0 auto;
   padding: 0 64px;
+}
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 @font-face {
   font-family: "RocBold";
