--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -169,13 +169,12 @@ svg {
   src: url("../../../public/fonts/Rocgrotesk-medium.ttf");
 }
 
-
 .title {
   font-weight: 700;
-    font-size: 2.9rem;
-    line-height: 3.6rem;
-    margin-bottom: 12px;
-    font-family: "RocBold";
+  font-size: 2.9rem;
+  line-height: 3.6rem;
+  margin-bottom: 12px;
+  font-family: "RocBold";
 }
 
 .box {
@@ -186,11 +185,9 @@ svg {
   margin-bottom: 112px;
 }
 
-.paragraph{
-    color: rgba(0, 0, 0, 0.7);
-    font-family: RocGrotesk;
-    font-weight: lighter;
-    font-size: 18px;
-    margin: 12px 0 32px 0;
-    line-height: 27px;
+.paragraph {
+  color: rgba(0, 0, 0, 0.7);
+  font-family: "RocRegular";
+  font-weight: lighter;
+  font-size: 16px;
 }
