--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -154,6 +154,16 @@ svg {
   margin: 0 auto;
   padding: 0 64px;
 }
+@media screen and (max-width: 1240px) {
+  .container {
+    padding: 0 40px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .container {
+    padding: 0 20px;
+  }
+}
 .mainContent {
   display: flex;
   flex-direction: column;
@@ -167,20 +177,6 @@ svg {
 @font-face {
   font-family: "RocRegular";
   src: url("../../../public/fonts/Rocgrotesk-medium.ttf");
-}
-.title {
-  font-weight: 700;
-  font-size: 2.9rem;
-  line-height: 3.6rem;
-  margin-bottom: 12px;
-  font-family: "RocBold";
-}
-.box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 80px;
-  margin-bottom: 112px;
 }
 .paragraph {
   color: rgba(0, 0, 0, 0.7);
